# CiteTube

./: .env  .env.example  .gitignore  README.md  app.py  db.py  ingest.py  llm.py  main.py  pyproject.toml  requirements.txt  retrieve.py  setup.py  setup_citetube.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
models/: __init__.py
src/citetube/: __init__.py
src/citetube/core/: __init__.py  config.py  db.py  logging_config.py  models.py  services.py  utils.py
src/citetube/ingestion/: __init__.py  ingest.py
src/citetube/llm/: __init__.py  agent.py  llm.py  tools.py  vllm_client.py
src/citetube/retrieval/: __init__.py  retrieve.py
src/citetube/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_core.py  test_ollama.py  test_pgvector.py  test_vllm.py
